fixed navbar byline on mobile

--- a/css/rs.css
+++ b/css/rs.css
@@ -12,10 +12,11 @@ html, body, div, p {
 .navbar .navbar-byline {
   float: left;
   height: 50px;
-  padding: 15px;
-  font-size: 14px;
+  padding: 16px 0 0 0;
+  font-size: 12px;
   line-height: 20px;
-  color: #6B6666; }
+  color: #6B6666;
+  vertical-align: middle; }
 
 /* widgets */
 .wdg {
